# hpps-ipol

./: .gitignore  README.md
bilateral_filter/bilateral/src/: CMakeLists.txt  bilateral.c  bilateral.h  bilateral_ipol.c  color_spaces.c  color_spaces.h  iio.c  iio.h  qauto.c  random.c  sum.c  test_bilateral.c  test_bilateral_cielab.c  test_bilateral_color.c  test_bilateral_grayscale.c  test_bilateral_opencv.c  testbilateral.c  testbilateral_opencv.c
bilateral_filter/data/: Lena.out.pgm
bilateral_filter/gabriele-facciolo/bil/: CMakeLists.txt  Makefile  README.txt  bilateral_filter.c  license.txt  main.c
bilateral_filter/gabriele-facciolo/bil/iio/: iio.c
